--- a/pyproject-publish.toml
+++ b/pyproject-publish.toml
@@ -16,9 +16,12 @@ readme = "README.md"
 packages = [{include = "tti_dataset_tools", from="./src"}]
 
 [tool.poetry.dependencies]
-python = "^3.6.1"
-pandas = "1.1.5"
-
+python = "^3.6"
+seaborn = "^0.11.2"
+pandas = "^1.1.5"
+numpy = "^1.19.5"
+shapely = "^1.7.1"
+tqdm = "^4.64.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
