--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,9 @@ readme = "README.md"
 packages = [{include = "tti_dataset_tools", from="./src"}]
 
 [tool.poetry.dependencies]
-python = "^3.6.1"
-pandas = "1.1.5"
+python = "^3.7.9"
+pandas = "^1.5.2"
+numpy = "^1.20.3"
 
 
 [tool.poetry.dev-dependencies]
