--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,13 +16,16 @@ readme = "README.md"
 packages = [{include = "tti_dataset_tools", from="./src"}]
 
 [tool.poetry.dependencies]
-python = "^3.7.9"
+python = "^3.8.15"
 pandas = "^1.5.2"
 numpy = "^1.20.3"
 
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+
+[tool.poetry.group.dev.dependencies]
+jupyterlab = "^3.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
