--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pytest = "^5.2"
 
 [tool.poetry.group.dev.dependencies]
 jupyterlab = "^3.5.2"
+seaborn = "^0.12.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
