--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ python = "^3.8.0"
 pandas = "^1.5.2"
 numpy = "^1.20.3"
 shapely = "~1.7.1"
+seaborn = "~0.12.1"
 
 
 [tool.poetry.dev-dependencies]
