--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "tti-dataset-tools"
-version = "0.1.3"
+version = "0.1.4"
 description = "A set of tools for trajectory dataset transformation, clean-up, and augmentation"
 authors = ["Golam Md Muktadir <muktadir@ucsc.edu>"]
 license = "Mozilla Public License Version 2.0"
@@ -21,6 +21,8 @@ pandas = "^1.5.2"
 numpy = "^1.20.3"
 shapely = "~1.7.1"
 seaborn = "~0.12.1"
+tqdm = "^4.65.0"
+vg = "^2.0.0"
 
 
 [tool.poetry.dev-dependencies]
