--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ repository = "https://github.com/adhocmaster/TTI-dataset-tools"
 keywords = ["Trajectory Dataset", "Trajectory Analysis", "Trajectory Transformation", "Trajectory Augmentation"]
 
 readme = "README.md"
-packages = [{include = "tti_dataset_tools", from="./src"}]
+packages = [{include = "tti_dataset_tools", from="./src"}, {include = "ind_tools", from="./src"}]
 
 [tool.poetry.dependencies]
 python = "^3.8.0"
