--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "tti-dataset-tools"
-version = "0.1.8"
+version = "0.1.9"
 description = "A set of tools for trajectory dataset transformation, clean-up, and augmentation"
 authors = ["Golam Md Muktadir <muktadir@ucsc.edu>"]
 license = "Mozilla Public License Version 2.0"
@@ -16,21 +16,15 @@ readme = "README.md"
 packages = [{include = "tti_dataset_tools", from="./src"}, {include = "ind_tools", from="./src"}]
 
 [tool.poetry.dependencies]
-python = "^3.8.0"
-pandas = "^1.5.2"
-numpy = "^1.20.3"
-shapely = "~1.8.1"
-seaborn = "~0.12.1"
-tqdm = "^4.65.0"
-vg = "^2.0.0"
-
+python = "^3.6"
+seaborn = "^0.11.2"
+pandas = "^1.1.5"
+numpy = "^1.19.5"
+shapely = "^1.8.1"
+tqdm = "^4.64.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
-
-[tool.poetry.group.dev.dependencies]
-jupyterlab = "^3.5.2"
-seaborn = "^0.12.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
